--- a/RemappingExamples.ipynb
+++ b/RemappingExamples.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Illustrative the remapping procedure"
+    "# Illustrating the remapping procedure"
    ]
   },
   {
