Added movies and code for getting Snapshots

--- a/LIGO_limits.ipynb
+++ b/LIGO_limits.ipynb
@@ -395,6 +395,7 @@
     "pl.ylabel(r\"$\\mathrm{d}\\langle V T \\rangle/\\mathrm{d}z$ (Gpc$^3$ yr)\")\n",
     "\n",
     "pl.legend()\n",
+    "pl.savefig(\"plots/LIGO_sensitivity.pdf\")\n",
     "pl.show()\n",
     "\n",
     "np.savetxt(\"data/LIGO_sensitivity_100.txt\", zip(zvals, VT[3]*sens_curve(zvals, M_list[3])))\n",
