Rearranged folder stucture

--- a/notebooks/NbodyResults.ipynb
+++ b/notebooks/NbodyResults.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# N-body Analysis\n",
+    "# N-body Results\n",
     "\n",
-    "Notebook for reading in the (processed) results of Gadget simulations and plotting them"
+    "Notebook for reading in the (processed) results of Gadget simulations and plotting them.\n",
+    "\n",
+    "The results are found in the `data/` folder of the main BlackHolesDarkDress github repo, named `Mapping_M30_a0.01.txt`, etc. These results are obtained using `Nbody/CalcOrbitalElements.ipynb` tabulated manually (unfortunately)."
    ]
   },
   {
@@ -18,9 +20,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named eddington",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-c7f006e04f74>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlines\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmlines\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0meddington\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0medd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintegrate\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mquad\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdblquad\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: No module named eddington"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import print_function\n",
     "\n",
@@ -395,96 +409,6 @@
     "\n",
     "pl.tight_layout()\n",
     "pl.savefig(\"../plots/FinalAngularMomentum.pdf\", bbox_inches='tight')\n",
-    "pl.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Merger times..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pl.figure(figsize=(7,5))\n",
-    "\n",
-    "t_merge_i_test = t_coal(a0, np.sqrt(1-j_in**2), M_PBH=30.0)\n",
-    "t_merge_f_test = t_coal(a_in, e_f_anal, M_PBH=30.0)\n",
-    "\n",
-    "\n",
-    "t_merge_i_lo = t_coal(0.01, e_i_lo, M_PBH=30.0)\n",
-    "t_merge_f_lo = t_coal(a_f_lo, e_f_lo, M_PBH=30.0)\n",
-    "\n",
-    "t_merge_i_hi = t_coal(0.01, e_i_hi, M_PBH=30.0)\n",
-    "t_merge_f_hi = t_coal(a_f_hi, e_f_hi, M_PBH=30.0)\n",
-    "\n",
-    "t_merge_i_old = t_coal(a0, e_i, M_PBH=30.0)\n",
-    "t_merge_f_old = t_coal(a_f, e_f, M_PBH=30.0)\n",
-    "    \n",
-    "pl.semilogx(t_merge_i_old, t_merge_f_old/t_merge_i_old, 'g+', markersize=15, alpha=1.0)  \n",
-    "#pl.semilogx(t_merge_i_lo, t_merge_f_lo/t_merge_i_lo, 'bx', markersize=10, label=\"Low-res\")\n",
-    "#pl.semilogx(t_merge_i_hi, t_merge_f_hi/t_merge_i_hi, 'r+', markersize=10, label=\"High-res\")\n",
-    "pl.semilogx(t_merge_i_test, t_merge_f_test/t_merge_i_test, 'b-', markersize=10)\n",
-    "    \n",
-    "pl.xlabel(r\"Initial $t_\\mathrm{merge}$\")\n",
-    "pl.ylabel(r\"Final $t_\\mathrm{merge}$/Initial $t_\\mathrm{merge}$\")\n",
-    "\n",
-    "pl.ylim(0, 2.0)\n",
-    "#pl.xlim(1e-3, 1)\n",
-    "\n",
-    "pl.axvline(13e9, linestyle='--', color='k')\n",
-    "pl.axhline(1.0, linestyle='--', color='k')\n",
-    "#pl.text(13e9*1.4, 0.5, r\"$t_\\mathrm{merge} \\sim t_\\mathrm{univ}$\" )\n",
-    "\n",
-    "pl.legend(loc = \"upper right\", fancybox=True)\n",
-    "pl.title(r\"$M_\\mathrm{PBH} = \" + str(int(M_PBH)) + \"M_\\odot$; a = \" + str(a0) + \" pc\")\n",
-    "\n",
-    "pl.tight_layout()\n",
-    "pl.savefig(\"MergerTime_M\" + str(int(M_PBH)) + \"_a\" + str(a0) + \".pdf\")\n",
-    "pl.show()\n",
-    "\n",
-    "pl.figure(figsize=(7,5))\n",
-    "\n",
-    "#evals = np.asarray([0.9, 0.99, 0.999, 0.9999, 0.99999, 0.999999])\n",
-    "#j2 = np.sqrt(1-evals**2)\n",
-    "\n",
-    "t_merge_i_test = t_coal(a0, np.sqrt(1-j_in**2), M_PBH=30.0)\n",
-    "t_merge_f_test = t_coal(a_in, e_f_anal, M_PBH=30.0)\n",
-    "\n",
-    "#t_merge_i_lo = t_coal(0.01, e_i_lo, M_PBH=30.0)\n",
-    "#t_merge_f_lo = t_coal(a_f_lo, e_f_lo, M_PBH=30.0)\n",
-    "\n",
-    "#t_merge_i_hi = t_coal(0.01, e_i_hi, M_PBH=30.0)\n",
-    "#t_merge_f_hi = t_coal(a_f_hi, e_f_hi, M_PBH=30.0)\n",
-    "\n",
-    "t_merge_i_old = t_coal(a0, e_i, M_PBH=30.0)\n",
-    "t_merge_f_old = t_coal(a_f, e_f, M_PBH=30.0)\n",
-    "    \n",
-    "pl.loglog(t_merge_i_old, t_merge_f_old, 'g+', markersize=15, alpha=1.0)  \n",
-    "pl.loglog(t_merge_i_lo, t_merge_f_lo, 'cx', markersize=10, label=\"Low-res\")\n",
-    "pl.loglog(t_merge_i_hi, t_merge_f_hi, 'r+', markersize=10, label=\"High-res\")\n",
-    "pl.loglog(t_merge_i_test, t_merge_f_test, 'b', markersize=10)\n",
-    "    \n",
-    "pl.xlabel(r\"Initial $t_\\mathrm{merge}$\")\n",
-    "pl.ylabel(r\"Final $t_\\mathrm{merge}$/Initial $t_\\mathrm{merge}$\")\n",
-    "\n",
-    "#pl.ylim(1e-3, 1)\n",
-    "#pl.xlim(1e-3, 1)\n",
-    "\n",
-    "pl.axvline(13e9, linestyle='--', color='k')\n",
-    "#pl.axhline(1.0, linestyle='--', color='k')\n",
-    "#pl.text(13e9*1.4, 0.5, r\"$t_\\mathrm{merge} \\sim t_\\mathrm{univ}$\" )\n",
-    "\n",
-    "pl.legend(loc = \"best\", fancybox=True)\n",
-    "pl.title(r\"a = 0.01 pc\")\n",
-    "\n",
-    "pl.tight_layout()\n",
-    "#pl.savefig(\"MergerTime2.pdf\")\n",
     "pl.show()"
    ]
   },
