Updated most notebooks

--- a/notebooks/MergerRate.ipynb
+++ b/notebooks/MergerRate.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculating Merger Rate\n",
+    "\n",
+    "Calculating and plotting the properties of PBH binaries (PDF etc.). These are then used (along with the remapping procedure) to calculate the average merger rate of PBH binaries today."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -52,6 +61,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define some constants + parameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -72,7 +88,7 @@
     "z_eq = 3375.0\n",
     "rho_eq = 1512.0 #Solar masses per pc^3\n",
     "sigma_eq = 0.005 #Variance of DM density perturbations at equality\n",
-    "lambda_max = 3.0\n",
+    "lambda_max = 3.0 #Maximum value of lambda = 3.0*z_dec/z_eq (i.e. binaries decouple all the way up to z_dec = z_eq)\n",
     "\n",
     "alpha = 0.1\n",
     "\n",
@@ -82,12 +98,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Function definitions\n",
+    "\n",
+    "#### Several useful functions that provide truncation radius, mass of accreted DM halo, decoupling redshift"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Several useful functions that provide truncation radius, mass of accreted DM halo, decoupling redshift\n",
     "\n",
     "#M_PBH in solar masses\n",
     "\n",
@@ -196,13 +220,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Some useful cosmological functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Some useful cosmological functions\n",
-    "\n",
     "def Hubble(z):\n",
     "    return H0_peryr*np.sqrt(Omega_L + Omega_m*(1+z)**3 + Omega_r*(1+z)**4)\n",
     "\n",
@@ -229,13 +258,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Probability distributions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Probability distributions\n",
-    "\n",
     "def j_X(x, f, M_PBH):\n",
     "    return bigX(x, f, M_PBH)*0.5*(1+sigma_eq**2/(0.85*f)**2)**0.5\n",
     "\n",
@@ -292,6 +326,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PDF plot for M_PBH = 30Msun and f_PBH = 0.01"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -308,7 +349,6 @@
     }
    ],
    "source": [
-    "# PDF plot for M_PBH = 30Msun and f_PHB = 0.01\n",
     "\n",
     "M_PBH_ref = 30.\n",
     "f_ref  = 0.01\n",
@@ -372,12 +412,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setting up the 'remapping' prescription\n",
+    "\n",
+    "Code for calculating $(a_i,j_i) \\rightarrow (a_f, j_f)$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# REMAPPING PRESCRIPTION\n",
     "\n",
     "def calcBindingEnergy(r_tr, M_PBH):\n",
     "    \n",
@@ -457,6 +505,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Monte Carlo sampling procedure"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -521,13 +576,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compute the rate from sampled and remapped Ali-Haimoud distribution - Analytical"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### First define the integrals for P(t)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Compute the rate from sampled and remapped Kamionkowski distribution - Analytical\n",
-    "\n",
     "def P_t_integ(a, t, f, M_PBH, withHalo):\n",
     "        \n",
     "    c = 3.e5 #km/s\n",
@@ -582,6 +649,15 @@
     "#N_20_flat = quad(sens_20Msun, 0, 0.7)[0]\n",
     "#N_40_flat = quad(sens_40Msun, 0, 0.7)[0]\n",
     "#print(\"Analytical Merger Rate [Gpc^-3 yr^-1] for 20 and 40 Msun:\", N_20/N_20_flat,\" - \",N_40/N_40_flat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Calculate 'remapped' rate using MC sampling\n",
+    "\n",
+    "Note that this may take a while (where a while is probably a few hours). You may want to read in the files `data/rate_averaged_100.0.txt` (etc) instead."
    ]
   },
   {
@@ -833,13 +909,7 @@
       "*** f =  0.000206913808111\n",
       "current_MPBH =  30.0\n",
       "Sampling PDF... \n",
-      "This is GetSamples_MCMC from a1 =  5e-05  to a2 =  0.0915514631777\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "This is GetSamples_MCMC from a1 =  5e-05  to a2 =  0.0915514631777\n",
       "   Generated  1290720 samples...\n",
       "...done!\n",
       "max a from GetSamples =  0.0915488884746\n",
@@ -1076,13 +1146,7 @@
       "*** f =  0.000615848211066\n",
       "current_MPBH =  100.0\n",
       "Sampling PDF... \n",
-      "This is GetSamples_MCMC from a1 =  5e-05  to a2 =  0.136759720546\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "This is GetSamples_MCMC from a1 =  5e-05  to a2 =  0.136759720546\n",
       "   Generated  1290720 samples...\n",
       "...done!\n",
       "max a from GetSamples =  0.136757111154\n",
@@ -1335,6 +1399,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Calculate 'analytic' rate without DM mini-halos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -1392,6 +1463,13 @@
     "        my_integral_an = quad(my_integrand_an, 0.0, zmax)[0] / zmax \n",
     "    \n",
     "        rate_vec_analytical[i_m, i_f] = n_PBH(f_vec_analytical[i_f], m_vec[i_m]) * my_integral_an # P_t_of_z_analytical(0., f_vec_analytical[i_f], m_vec[i_m], withHalo=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot Merger Rates"
    ]
   },
   {
@@ -1492,7 +1570,7 @@
     "pl.tight_layout()\n",
     "\n",
     "pl.legend(loc='lower right', frameon=False)\n",
-    "pl.savefig(\"ratePlot_smooth.pdf\", format='pdf')\n",
+    "pl.savefig(\"../plots/mergerRate_remapped.pdf\", format='pdf')\n",
     "\n",
     "pl.show()"
    ]
